# crabfetch

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust.yml
src/: main.rs
