[package]
name = "crabfetch"
description = "A simple fetch utility, written in Rust"
authors = ["Snehit Sah <snehitsah@protonmail.com>"]
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/flyingcakes85/crabfetch/"
license = "GPL-3.0"
keywords = ["fetch", "sysinfo"]
categories = ["command-line-utilities"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.0"
ansi_term = "0.12.1"
termion = "1.5.6"
confy = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }